--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.5",
     "element": "^0.1.4",
     "element-ui": "^2.10.1",
+    "json-bigint": "^0.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7"
   },
